--- a/vignettes/color_inst.Rmd
+++ b/vignettes/color_inst.Rmd
@@ -62,12 +62,12 @@ They can be easily adapted to any other group, company, or entity, that uses som
 # ToDo. 
 ```
 
-### A. [University of Freiburg](https://www.uni-freiburg.de), Germany: 
+### A. [University of Freiburg](https://uni-freiburg.de/), Germany: 
 <img src = "../inst/pix/logo_freiburg.png" align = "right" width = "120px" alt = "Uni Freiburg" style = "border:10;"/> 
 
-The [Albert-Ludwigs Universität Freiburg](https://www.uni-freiburg.de) provides fairly extensive information on its corporate color scheme (available [here](https://www.zuv.uni-freiburg.de/service/cd/cd-manual/farbwelt) and [here](https://www.zuv.uni-freiburg.de/service/wsg/webstyleguide/farben)). 
+The [Albert-Ludwigs Universität Freiburg](https://uni-freiburg.de/) provides fairly extensive information on its corporate color scheme (available [here](https://www.zuv.uni-freiburg.de/service/cd/cd-manual/farbwelt) and [here](https://www.zuv.uni-freiburg.de/service/wsg/webstyleguide/farben)). 
 Colors can be defined in a variety of ways, but R comes with convenient tools (like `col2rgb` and `convertColor` in **grDevices**) to handle most cases. The most straightforward way of creating a new color palette in R is by using its HEX/HTML code (provided in character format). 
-As the [University of Freiburg](https://www.uni-freiburg.de) kindly provides their colors in this format, we can easily define the corresponding color palettes as named vectors: 
+As the [University of Freiburg](https://uni-freiburg.de/) kindly provides their colors in this format, we can easily define the corresponding color palettes as named vectors: 
 
 ```{r freiburg-cols, fig.width = 5, fig.asp = .80, fig.align = 'center', fig.show = "hold", collapse = TRUE}
 # Basic colors: https://www.zuv.uni-freiburg.de/service/cd/cd-manual/farbwelt
@@ -78,7 +78,7 @@ names(pal_freiburg_bluered) <- c("uni-blau", "uni-rot")
 pal_freiburg_basic <- c("#004a99", "white", "#c1002a")  # add "white" for better gradients
 names(pal_freiburg_basic) <- c("uni-blau", "weiss", "uni-rot")
 
-# Web colors: https://www.zuv.uni-freiburg.de/service/wsg/webstyleguide/farben  
+# Web colors: https://www.zuv.uni-freiburg.de/service/wsg/webstyleguide/farben
 
 pal_freiburg_blue <- c("#004a99", "#2a6ebb", "#6f9ad3")
 names(pal_freiburg_blue) <- c("blue-1", "blue-2", "blue-3")
