--- a/README.Rmd
+++ b/README.Rmd
@@ -37,11 +37,10 @@ library(unikn)  # load package
 </a> 
 -->
 
-### Enabling corporate design elements in\ [R](https://www.r-project.org/) {-}
+### Enabling corporate design elements in\ R {-}
 
 The **unikn** package provides color functions — by defining dedicated colors and color palettes, and commands for changing, viewing, and using them — and styled text elements (e.g., for marking, underlining, or plotting colored titles). 
-The pre-defined range of colors and text functions is based on the corporate design of the [University of Konstanz](https://www.uni-konstanz.de/) (see [this link](https://www.uni-konstanz.de/en/university/news-and-media/create-online-and-print-media/corporate-design/) for details), 
-but can be adapted and extended for other institutions and purposes. 
+The pre-defined range of colors and text functions is based on the corporate design of the [University of Konstanz](https://www.uni-konstanz.de/) (see [this link](https://www.uni-konstanz.de/en/university/news-and-media/create-online-and-print-media/corporate-design/) for details), but can be adapted and extended for other institutions and purposes. 
 
 ## Background 
 
